--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,67 @@
     border: 1px solid blue;
 }
 
-.contenido {
+html, body {
     display: flex;
-    padding: 2% 2% 0 5%;
+    flex-direction: column;
+    height: 100%;
 }
 
+.contenido {
+    display: flex;
+    flex: 1;
+    padding: 2% 2% 2% 12%;
+    width: 86%;
+}
+
+
 .contenido__seccion__izq {
-    width: 50%;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    padding: 8% 6% 3% 0%;
 }
 
 textarea {
+    flex: 1;
     width: 100%;
-    height: 80%;
+    box-sizing: border-box;
+    font-size: 2rem;
+}
+
+.contenido__seccion__izq__div__botones {
+    display: flex;
+    gap: 24px;
+}
+
+.botones_seccion_izq {
+    flex: 1;
+    border-radius: 24px;
+    padding: 24px;
 }
 
 .contenido__seccion__der {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 32px;
     width: auto;
+    border-radius: 32px;
+    padding: 0 2rem;
+}
+
+.imagen__persona {
+    width: 100%;
+}
+
+.contenedor__textos__seccion__der {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    text-align: center;
+    padding: 10%;
+}
+
+.texto_titulo {
+    font-size: 1.5rem;
 }
