--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ html, body {
     display: flex;
     flex: 1;
     flex-direction: column;
-    padding: 8% 6% 3% 0%;
+    padding: 8% 5rem 2rem 0;
 }
 
 textarea {
@@ -75,16 +75,69 @@ textarea {
     font-size: 1.5rem;
 }
 
+.contenido__seccion__desencriptado {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 32px;
+    width: 20%;
+    border-radius: 32px;
+    padding: 2rem;
+}
+
+#btn-copiar {
+    border-radius: 24px;
+    padding: 24px;
+}
+
+@media (max-width: 1320px) {
+
+    .contenido {
+        padding: 2% 2% 2% 6%;
+        width: 92%;
+    }
+
+    .contenido__seccion__izq {
+        width: 80%;
+        padding: 8% 3rem 2rem 0;
+    }
+
+    .contenido__seccion__der {
+        width: 20%;
+    }
+}
+
+@media (max-width: 1080px) { 
+    .contenido {
+        padding: 2% 2% 2% 2%;
+        width: 96%;
+    }
+
+    .contenido__seccion__izq {
+        padding: 8% 2rem 2rem 0;
+    }
+}
+
 @media (max-width: 768px) {
 
     .contenido {
         flex-direction: column;
         gap: 4rem;
         padding: 4.5rem 2.5rem 2.5rem 2.5rem;
+        width: auto;
     }
 
     .contenido__seccion__izq {
+        width: auto;
         padding: 0;
+    }
+
+    .contenido__seccion__der {
+        width: auto;
+    }
+
+    .contenido__seccion__desencriptado {
+        width: auto;
     }
 
     .logo-alura {
@@ -101,4 +154,21 @@ textarea {
 
 @media (max-width: 375px) {
 
+    .contenido {
+        flex-direction: column;
+        padding: 1.5rem 1rem 1rem 1rem;
+    }
+
+    .logo-alura {
+        width: 32px;
+        height: 48px;
+    }
+
+    .contenido__seccion__izq__div__botones {
+        flex-direction: column;
+    }
+
+    .contenedor__textos__seccion__der {
+        padding: 8%;
+    }
 }
