--- a/css/styles.css
+++ b/css/styles.css
@@ -66,23 +66,27 @@ html, body {
 }
 
 textarea {
+    border: 0;
+    resize: none;
+    box-sizing: border-box;
+    overflow-y: hidden;
+}
+
+.contenido__texto__usuario {
     flex: 1;
     width: 100%;
-    box-sizing: border-box;
     color: var(--color-fuente-primaria);
     font-size: 2rem;
     font-family: var(--fuente-Inter);
     font-weight: 400;
     background-color: var(--color-body);
-    border: 0;
-    resize: none;
 }
 
 textarea:focus {
     outline: none; /* Elimina el borde por defecto en focus */
 }
 
-textarea::placeholder {
+.contenido__texto__usuario::placeholder {
     color: var(--color-fuente-primaria) /* Cambia el color del texto del placeholder */
 }
 
@@ -208,12 +212,12 @@ footer {
     }
 
     .contenido__seccion__izq {
-        width: 80%;
+        width: auto;
         padding: 8% 3rem 2rem 0;
     }
 
     .contenido__seccion__der {
-        width: 20%;
+        width: 22%;
     }
 }
 
