--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ textarea:focus {
     text-align: center;
     padding: 5%;
     font-family: var(--fuente-Inter);
+    transition: transform 0.3s ease; /* Para suavizar el efecto de la animación */
 }
 
 .texto_titulo {
@@ -298,4 +299,26 @@ footer {
         width: auto;
         height: auto;
     }
+}
+
+/*ANIMACIONES/*
+
+/* Definir la animación de sacudón */
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-20px); } /* Mayor distancia hacia la izquierda */
+    50% { transform: translateX(20px); }  /* Mayor distancia hacia la derecha */
+    75% { transform: translateX(-20px); } /* Mayor distancia hacia la izquierda */
+    100% { transform: translateX(0); }     /* Regresa a la posición original */
+}
+
+/* Estilo para el párrafo */
+#myParagraph {
+    display: inline-block; /* Necesario para que la animación funcione correctamente */
+    transition: transform 0.3s ease; /* Para suavizar el efecto de la animación */
+}
+
+/* Clase que activa la animación */
+.shake {
+    animation: shake 0.5s; /* Duración de la animación */
 }
