ajuste de textarea para que tenga scroll, cambio de stilo barra de scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,13 @@ textarea {
     border: 0;
     resize: none;
     box-sizing: border-box;
-    overflow-y: hidden;
+    overflow: auto;
 }
 
 .contenido__texto__usuario {
     flex-grow: 1;
     width: 100%;
+    min-height: 400px;
     color: var(--color-fuente-primaria);
     font-size: 2rem;
     font-family: var(--fuente-Inter);
@@ -84,6 +85,21 @@ textarea {
 
 textarea:focus {
     outline: none; /* Elimina el borde por defecto en focus */
+}
+
+/* Estilos para la barra de desplazamiento */
+textarea::-webkit-scrollbar {
+    width: 6px; /* Ancho de la barra de desplazamiento */
+}
+textarea::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Color del fondo de la barra de desplazamiento */
+}
+textarea::-webkit-scrollbar-thumb {
+    background: #888; /* Color de la barra de desplazamiento */
+    border-radius: 3px; /* Bordes redondeados */
+}
+textarea::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color de la barra de desplazamiento al pasar el ratón */
 }
 
 .contenido__texto__usuario::placeholder {
@@ -173,6 +189,7 @@ textarea:focus {
 }
 
 .texto_desencriptado {
+    flex: 1;
     font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 24px;
@@ -283,6 +300,12 @@ footer {
         width: auto;
     }
 
+    .texto_desencriptado {
+        flex: none;
+        overflow: auto;
+        max-height: 800px;
+    }
+
     .logo__alura {
         background-image: url("../assets/logo-alura-tablet.png");
         width: 31px;
@@ -297,10 +320,6 @@ footer {
 
 @media (max-width: 375px) {
 
-    /* html, body {
-        height: 150%;
-    } */
-
     .contenido {
         flex-direction: column;
         padding: 1.5rem 1rem 1rem 1rem;
@@ -311,10 +330,6 @@ footer {
         height: 48px;
     }
 
-    /* .contenido__seccion__izq {
-        height: auto;
-    }
- */
     .contenido__seccion__izq__div__botones {
         flex-direction: column;
     }
@@ -326,6 +341,10 @@ footer {
     .contenido__seccion__desencriptado {
         width: auto;
         height: auto;
+    }
+
+    .contenido__texto__usuario {
+        min-height: 300px;
     }
 }
 
